# data_mining_UBA

./: README.MD  inputers.py  outliers.py  pipelines.py  pre_processing.py  pyproject.toml
data/: poligonos.geojson
