[tool.poetry]
name = "data_mining_uba"
version = "0.1.0"
description = ""
authors = ["Andrés Sandoval <andres.sndbrca@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
nltk = "^3.7"
haversine = "^2.5.1"
turfpy = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
